# a-ttic

./: .dockerignore  .env.pipeline  .gitattributes  .gitignore  Dockerfile  LICENSE  Makefile  README.md  RUN_PHASE_A.md  RUN_PIPELINE.md  agent_notes.md  encoder_pretraining_caption_report.tex  encoder_selection.md  implementation_roadmap.md  methods.md  pipeline.out  pyproject.toml
_ops/: agent_notes.md  clip_rerun_watcher.sh  clip_reruns.complete  clip_reruns_postphase.sh  finisher.sh  finisher_v2.sh  pipeline_summary.txt  pipeline_watcher.sh
captions/: analysis_aggregate_beam_mixed_effects.csv  analysis_aggregate_beam_no_mae_mixed_effects.csv  analysis_aggregate_beam_no_mae_primary.csv  analysis_aggregate_beam_no_mae_secondary.csv  analysis_aggregate_beam_no_mae_summary.txt  analysis_aggregate_beam_primary.csv  analysis_aggregate_beam_secondary.csv  analysis_aggregate_beam_summary.txt  analysis_aggregate_nucleus_mixed_effects.csv  analysis_aggregate_nucleus_no_mae_mixed_effects.csv  analysis_aggregate_nucleus_no_mae_primary.csv  analysis_aggregate_nucleus_no_mae_secondary.csv  analysis_aggregate_nucleus_no_mae_summary.txt  analysis_aggregate_nucleus_primary.csv  analysis_aggregate_nucleus_secondary.csv  analysis_aggregate_nucleus_summary.txt  analysis_seed1_beam_mixed_effects.csv  analysis_seed1_beam_no_mae_mixed_effects.csv  analysis_seed1_beam_no_mae_primary.csv  analysis_seed1_beam_no_mae_secondary.csv  analysis_seed1_beam_no_mae_summary.txt  analysis_seed1_beam_primary.csv  analysis_seed1_beam_secondary.csv  analysis_seed1_beam_summary.txt  analysis_seed1_nucleus_mixed_effects.csv  analysis_seed1_nucleus_no_mae_mixed_effects.csv  analysis_seed1_nucleus_no_mae_primary.csv  analysis_seed1_nucleus_no_mae_secondary.csv  analysis_seed1_nucleus_no_mae_summary.txt  analysis_seed1_nucleus_primary.csv  analysis_seed1_nucleus_secondary.csv  analysis_seed1_nucleus_summary.txt  analysis_seed2_beam_mixed_effects.csv  analysis_seed2_beam_no_mae_mixed_effects.csv  analysis_seed2_beam_no_mae_primary.csv  analysis_seed2_beam_no_mae_secondary.csv  analysis_seed2_beam_no_mae_summary.txt  analysis_seed2_beam_primary.csv  analysis_seed2_beam_secondary.csv  analysis_seed2_beam_summary.txt  (+39 more)
configs/: base.yaml  clip.yaml  dinov2.yaml  mae.yaml  siglip.yaml
docs/: RUN_PIPELINE.md  implementation_roadmap.md  methods.md
scripts/: 00_smoke_test.py  01_cache_features.py  01_download_data.py  02_train_adaptor.py  02_train_clip.py  04_generate_captions.py  05_score_metrics.py  06_analyze.py  07_probes.py  08_caption_quality.py  09_aggregate_seeds.py  10_bootstrap_ci.py  11_permutation_test.py  run_full_pipeline.sh  run_phase_a.sh
tests/: conftest.py  test_adaptor.py  test_data.py  test_metrics.py  test_new_features.py  test_stats.py
(+29 files in other folders)
